Text zoom should reflow the viewport, otherwise fixed-pos elements don't get reflown correctly.  Bug 51578, r=dbaron, sr=waterson